testing/framework/resources/Advanced/Failing/mondrian/query5952.e
#2
#208
Unit H103
\N
